# gestion-couture

./: .gitignore  GUIDE-INSTALLATION.md  INSTALLER-CLIENT.bat  INSTALLER-SERVEUR.bat  demarrage-dev.bat  index.html  mise-a-jour.bat  package-lock.json  package.json  start-app.bat  tailwind.config.js  transformation-web.patch  vite.config.ts  web+demarrage-auto.patch
backend/: init.sql  package-lock.json  package.json  tsconfig.json
backend/public/: index.html
backend/service/: install-service.js  uninstall-service.js
backend/src/: db.ts  init.sql  server.ts
outils/: creer-raccourci.ps1  lancer-application.ps1  serveurs.txt
src/: App.css  App.tsx  index.css  main.tsx  theme.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities/shell/: cmd.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AssistantIA.tsx  ConfigurationReseau.tsx  ConfigurationServeur.tsx  DiagnosticReseau.tsx  ExportImportConfiguration.tsx  ImportClientsExcel.tsx  MenuUtilisateur.tsx  Navbar.tsx  RouteGuard.tsx  newFile.1.tsx
src/config/: menuSections.ts  permissions.ts
src/contexts/: AuthContext.tsx  NavbarContext.tsx  ProtectedRoute.tsx
src/database/: db.ts
src/hooks/: useFinance.ts  usePanier.ts  usePermission.ts  useStock.ts
src/services/: api.ts  backend.ts  commandesService.ts  financeService.ts  journal.ts  mesuresService.ts  permissions.ts  salaireService.ts  session.ts  utilisateurs.ts  vente.ts  ventes.ts
src/types/: articles.ts  auth.ts  categories.ts  couleurs.ts  db.ts  (+10 more)
(+307 files in other folders)
