[package]
name = "gestion-couture"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "gestion_couture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }

tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-log = "2.8.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
